--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,11 @@
+<!DOCTYPE HTML>
 <html> 
-    <head>
-        Hi!
+    <head lang = "en">
+        <title>Hi!</title>>
     </head>>
 
     <body>
-        hello
+        <h1>Welcome to my website</h1>
+        hello world
     </body>
 </html>
